--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Module 2 Responsive</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <h1> Our Menu</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="chicken">
+                <h2>Chicken</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos natus blanditiis numquam delectus nam at dignissimos incidunt expedita, autem debitis suscipit voluptate veniam optio eum iste temporibus culpa. Quae, nihil.
+                </p>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="beef">
+                <h2>Beef</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos natus blanditiis numquam delectus nam at dignissimos incidunt expedita, autem debitis suscipit voluptate veniam optio eum iste temporibus culpa. Quae, nihil.
+                </p>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="sushi">
+                <h2>Sushi</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos natus blanditiis numquam delectus nam at dignissimos incidunt expedita, autem debitis suscipit voluptate veniam optio eum iste temporibus culpa. Quae, nihil.
+                </p>
+            </section>
+
+        </div>
+
+    </div>
+
+</body>
+
+</html>
